--- a/Store/Store/Store.csproj
+++ b/Store/Store/Store.csproj
@@ -196,11 +196,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ImageValidateion.cs" />
+    <Compile Include="Migrations\201704201240135_InitialCreate.cs" />
+    <Compile Include="Migrations\201704201240135_InitialCreate.Designer.cs">
+      <DependentUpon>201704201240135_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Data\User.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Data\StoreDbContext.cs" />
     <Compile Include="Models\Products\CreateProductModel.cs" />
+    <Compile Include="Models\Products\HomeProducts.cs" />
+    <Compile Include="Models\Products\ProductDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -259,6 +267,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Products\Create.cshtml" />
+    <Content Include="Views\Products\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -277,6 +287,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704201240135_InitialCreate.resx">
+      <DependentUpon>201704201240135_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
